<resources>
    <string name="app_name">JpoRating</string>

    <string name="btn_launch_interrogation_launch">Launch interrogation</string>
    <string name="btn_launch_interrogation_send_report">Send interrogations report</string>
    <string name="btn_launch_interrogation_clear_report">Reset interrogations report</string>

    <string name="lbl_answering_interrogation_status">Answered %d of %d questions</string>
    <string name="btn_answering_interrogation_finish">Finish</string>

    <string name="hint_question_item_rating">Rating, %d on 10</string>
    <string name="lbl_question_item_place">Question n°%d out of %d</string>
    <string name="btn_question_item_reset">Reset</string>
    <string name="btn_question_item_validate">Validate</string>

    <string name="smile_rating_terrible">Terrible</string>
    <string name="smile_rating_bad">Bad</string>
    <string name="smile_rating_okay">Okay</string>
    <string name="smile_rating_good">Good</string>
    <string name="smile_rating_great">Great</string>

    <string name="lbl_confirm_dialog_title">Are you sure you want to do this ?</string>
    <string name="hint_confirm_dialog_pin">Pin code</string>
    <string name="btn_confirm_dialog_yes">Yes</string>
    <string name="btn_confirm_dialog_no">No</string>
</resources>