<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    android:elevation="6dp"
    android:padding="8dp"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_question"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="16dp"
            android:autoSizeMaxTextSize="24sp"
            android:autoSizeMinTextSize="16sp"
            android:autoSizeTextType="uniform"
            android:maxLines="2" />

        <TextView
            android:id="@+id/text_hint_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_question_item_rating" />

        <SeekBar
            android:id="@+id/seek_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:min="1"
            android:progress="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/lbl_question_item_place" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reset"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/btn_question_item_reset" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_validate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/btn_question_item_validate" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>